[tool.poetry]
name = "tailr-backend"
version = "0.1.0"
description = ""
authors = ["Matias Perichon <matias.perichon@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphene = ">=3.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
